tests/tests/ui/create_scoped_not_scope.stderr
error[E0277]: this scope does not support scoped creation
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ this relation scope cannot create records
   |
   = help: the trait `toasty::schema::CreateScope` is not implemented for `i64`
   = note: Only direct relation scopes support scoped creation.
   = note: Multi-step (`via`) relation scopes can be queried and filtered, but Toasty cannot create records through them because that would require creating or choosing intermediate records.
note: required by a bound in `toasty::codegen_support::scope_fields`
  --> $WORKSPACE/crates/toasty/src/codegen_support.rs
   |
   | pub fn scope_fields<S: CreateScope>(_scope: &S) -> S::Path<S::Item> {
   |                        ^^^^^^^^^^^ required by this bound in `scope_fields`
